
add_subdirectory (templates)


CONFIGURE_FILE(
    ${CMAKE_CURRENT_SOURCE_DIR}/nproxyd.conf.xml.in
    ${CMAKE_CURRENT_BINARY_DIR}/nproxyd.conf.xml
)

IF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/nproxyd.conf.xml )
    INSTALL( FILES
	    ${CMAKE_CURRENT_BINARY_DIR}/nproxyd.conf.xml
	    DESTINATION ${NPROXY_CONFIG_DIR}
	    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
       )
ENDIF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/nproxyd.conf.xml )

IF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/scripts/default.lua )
    INSTALL( FILES
	    ${CMAKE_CURRENT_SOURCE_DIR}/scripts/default.lua
	    DESTINATION ${NPROXY_CONFIG_DIR}/scripts/
	    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
       )
ENDIF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/scripts/default.lua )

IF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/scripts/extern.lua )
    INSTALL( FILES
	    ${CMAKE_CURRENT_SOURCE_DIR}/scripts/extern.lua
	    DESTINATION ${NPROXY_CONFIG_DIR}/scripts/
	    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
       )
ENDIF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/scripts/extern.lua )

IF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/scripts/_utils.lua )
    INSTALL( FILES
	    ${CMAKE_CURRENT_SOURCE_DIR}/scripts/_utils.lua
	    DESTINATION ${NPROXY_CONFIG_DIR}/scripts/
	    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
       )
ENDIF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/scripts/_utils.lua )

IF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/scripts/_strict.lua )
    INSTALL( FILES
	    ${CMAKE_CURRENT_SOURCE_DIR}/scripts/_strict.lua
	    DESTINATION ${NPROXY_CONFIG_DIR}/scripts/
	    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ
       )
ENDIF ( NOT EXISTS $ENV{DESTDIR}/${NPROXY_CONFIG_DIR}/scripts/_strict.lua )


